syntax = "proto3";

package scope;

import "github.com/metaverse/truss/deftree/googlethirdparty/annotations.proto";

service Scope {
  rpc UserScope (UserScopeRequest) returns (UserScopeResponse) {
    option (google.api.http) = {
      get: "/scope/user/{ID}"
    };
  }
}

message UserScopeRequest {
  uint64 ID = 1;
}
message UserScopeResponse {
  int32 code = 1;
  string message = 2;
  repeated string scopes = 3;
}